# ODYSSEA_example

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
copernicusmarine_template/: odyssea_dl.json
examples/: ODYSSEA_disk.ipynb  ODYSSEA_online.ipynb
